react_app_deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: react-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
        - name: react-app
          image: monyshchuk/react_app
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      restartPolicy: Always
